Bugfix: overflow on camera-trigger button was invalid

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -434,9 +434,12 @@ left: 2em;
     border-radius: 0;
 }
 
+camera-trigger {
+    overflow:hidden;
+}
+
 .camera-trigger {
     //position:relative;
-    overflow:hidden;
     cursor:pointer;
 
     input {
